# amr_software_ws

./: .gitignore  main.cpp  platformio.ini  readme.md
amr_hardware/: CMakeLists.txt  package.xml
docs/: Week1_Code_Reference.md  Week1_DevLog.md  lidar_xacro.md
maps/: 1f_map.pgm  1f_map.yaml  B1_map.yaml
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/launch/: display.launch.py  gazebo.launch.py  one_click_slam_1f.launch.py  spawn_amr_1f.launch.py
src/amr_description/rviz/: display.rviz
src/amr_description/scripts/: generate_map.py
src/amr_description/urdf/: amr_base.xacro  inertial_macros.xacro  lidar.xacro
src/amr_description/worlds/: 1F.world  1F_map.sdf
src/amr_hardware/: CMakeLists.txt  amr_hardware.xml
src/amr_hardware/include/amr_hardware/: amr_system.hpp  cmd_vel_to_wheel.hpp
src/amr_hardware/src/: amr_system.cpp  cmd_vel_to_wheel.cpp
src/amr_mission_control/: CMakeLists.txt  package.xml
src/amr_mission_control/config/: nav2_params.yaml  slam_params.yaml
src/amr_mission_control/include/amr_mission_control/: state_machine_node.hpp
src/amr_mission_control/launch/: mapper.launch.py  navigation.launch.py  one_click_nav.launch.py  run_square.launch.py
src/amr_mission_control/maps/: my_first_map.pgm  my_first_map.yaml
src/amr_mission_control/src/: square_tester.cpp  state_machine_node.cpp
